--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:label="@string/app_name"
-            android:name=".CurrenciesTabActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+        <service android:name=".Service.MyService" android:enabled="true"></service>
     </application>
 
 </manifest>
